Formulated Quadratic solution for price_demand

--- a/NewsVendorProblem_WithExtension_LP.ipynb
+++ b/NewsVendorProblem_WithExtension_LP.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "NewsVendorProblem_WithExtension_LP.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -12,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -23,7 +25,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hix9JFQ-yBYA",
-        "outputId": "0934ec2b-cfa4-408b-b8a6-c6f953d6532e"
+        "outputId": "03d1ac9a-b15a-4331-f86e-24bf533c1f8c"
       },
       "outputs": [
         {
@@ -31,10 +33,10 @@
           "name": "stdout",
           "text": [
             "Collecting gurobipy\n",
-            "  Downloading gurobipy-9.5.0-cp37-cp37m-manylinux2014_x86_64.whl (11.5 MB)\n",
-            "\u001b[K     |████████████████████████████████| 11.5 MB 3.9 MB/s \n",
+            "  Downloading gurobipy-9.5.1-cp37-cp37m-manylinux2014_x86_64.whl (11.5 MB)\n",
+            "\u001b[K     |████████████████████████████████| 11.5 MB 8.1 MB/s \n",
             "\u001b[?25hInstalling collected packages: gurobipy\n",
-            "Successfully installed gurobipy-9.5.0\n"
+            "Successfully installed gurobipy-9.5.1\n"
           ]
         }
       ],
@@ -54,7 +56,7 @@
       "metadata": {
         "id": "d-U1r4JWyM1W"
       },
-      "execution_count": 32,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -88,9 +90,9 @@
           "height": 265
         },
         "id": "-_2zto5Uy5dR",
-        "outputId": "7db2256d-320e-47f2-8526-4d6f8e37ad52"
+        "outputId": "e79abe82-cd18-403a-a83e-8ef4275bd7ed"
       },
-      "execution_count": 18,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -114,7 +116,7 @@
       "metadata": {
         "id": "UxYVU6pcy6DU"
       },
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -188,7 +190,7 @@
       "metadata": {
         "id": "vYxh8r2AzSlq"
       },
-      "execution_count": 25,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -206,7 +208,7 @@
       "metadata": {
         "id": "7E1QDgDGAa-d"
       },
-      "execution_count": 26,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -225,7 +227,7 @@
       "metadata": {
         "id": "4ZFF4KXW0ufG"
       },
-      "execution_count": 27,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -245,9 +247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kf4L0FtNEOYf",
-        "outputId": "fd4a8554-745c-4ae1-eb77-3db48155a56e"
+        "outputId": "c99339c2-b654-4d74-b993-75b9ce94ee00"
       },
-      "execution_count": 33,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nj7KTlnGEPO4",
-        "outputId": "2b3b4cc0-9673-4fd1-933c-1d4925e1150b"
+        "outputId": "93e64ec4-4ac0-4054-884f-2103417d8ddc"
       },
-      "execution_count": 34,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,9 +282,54 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ans 4\n",
+        "\n",
+        "Cost related constraints and price associated quadratic and linear objective\n",
+        "#Explained on Sheet of paper \n",
+        "\n",
+        "We removed the revenue associtaed term from the linear constraints so that we can treat the quadratic part separately in the objcetive and have our constraints as linear function of demand, which is now explained in terms of price\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "i1bnzVxS5fAg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Decision variables schema --> optimal_quantity, price, all the cost collected on residuals\n"
+      ],
+      "metadata": {
+        "id": "Fg5gsXcuBcho"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.zeros((2*nd,nd+2))#Number of contrainst remains same but the decision variable has increased by 1 #scaling same transalation shift 1\n",
+        "for r in range(nd):\n",
+        "  #First series of profit value_stepfunction (Di>q)\n",
+        "  A[2*r,[0,1,r+2]] = [-(oridinary_hour_cost-rush_hour_cost),-b1*rush_hour_cost,1] # location 1 is q, location r+1 is this h\n",
+        "  rhs[2*r] = b0*rush_hour_cost + residual_arr[r]*rush_hour_cost\n",
+        "\n",
+        "  #Second series of profit step function (q>Di)\n",
+        "  # A[2*r+1,[0,r+2]] = [oridinary_hour_cost+disposal_cost,1]\n",
+        "  # rhs[2*r+1] =  price*estimated_demand_atPrice1[r]-disposal_cost*estimated_demand_atPrice1[r]"
+      ],
+      "metadata": {
+        "id": "MBlb66N6EiRA"
+      },
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -290,7 +337,7 @@
         ""
       ],
       "metadata": {
-        "id": "MBlb66N6EiRA"
+        "id": "Yw-4rhbmz4Cx"
       },
       "execution_count": null,
       "outputs": []
